Some minor fixes needed to get the page workign on small devices

--- a/css/actividades.css
+++ b/css/actividades.css
@@ -37,3 +37,10 @@
     grid-template-columns: 70%;
   }
 }
+
+
+@media only screen and (max-width: 400px) {
+  .activity-content {
+    grid-template-columns: 25%;
+  }
+}
